--- a/src/utilities/css/style.css
+++ b/src/utilities/css/style.css
@@ -7,7 +7,6 @@
 * {
     margin: 0;
     padding: 0;
-
 }
 
 .center {
@@ -65,4 +64,39 @@
     font-weight: 700;
     /* background-color: red; */
     padding: 6px 15px;
+    cursor: pointer;
+}
+
+.main {
+    background-color: black;
+    /* later change it */
+    height: 100vh;
+}
+
+.main_container {
+    /* background-color: red; */
+    padding: 7vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.main_heading {
+    font-family: 'Inter', sans-serif;
+    font-size: 42px;
+    font-weight: 600;
+    color: white;
+}
+
+.main_para {
+    margin-top: 15px;
+    color: white;
+    font-family: 'Inter', sans-serif;
+    font-size: 14px;
+    font-weight: 300;
+}
+
+.container {
+    background-color: red;
 }
