--- a/src/utilities/css/style.css
+++ b/src/utilities/css/style.css
@@ -38,6 +38,8 @@
     font-family: 'Oswald', sans-serif;
 }
 
+
+
 .logo {
     margin-right: 15px;
 }
@@ -100,3 +102,10 @@
 .container {
     background-color: red;
 }
+
+.gradient-bg-footer {
+    background-color: #0f0e13;
+    background-image: 
+      radial-gradient(at 0% 100%, hsla(253,16%,7%,1) 0, transparent 53%), 
+      radial-gradient(at 50% 150%, hsla(339,49%,30%,1) 0, transparent 50%);
+  }
