--- a/src/utilities/css/style.css
+++ b/src/utilities/css/style.css
@@ -1,111 +1,175 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap");
 /* font-family: 'Oswald', sans-serif; */
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800;900&display=swap");
 /* font-family: 'Inter', sans-serif; */
 
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .center {
-    /* background-color: red; */
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 2px 0;
+  /* background-color: red; */
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 2px 0;
 }
 
 .search {
-    font-size: 14px;
-    font-weight: 300;
-    border: none;
-    height: 30px;
-    border-radius: 4px;
-    margin-top: 2px;
-    font-family: 'Inter', sans-serif;
+  font-size: 14px;
+  font-weight: 300;
+  border: none;
+  height: 30px;
+  border-radius: 4px;
+  margin-top: 2px;
+  font-family: "Inter", sans-serif;
 }
 
 .logo_inner {
-    background-color: #F5C518;
-    padding: 2px 12px;
-    font-weight: 700;
-    border-radius: 5px;
-    font-size: 20px;
-    cursor: pointer;
-    font-family: 'Oswald', sans-serif;
+  background-color: #f5c518;
+  padding: 2px 12px;
+  font-weight: 700;
+  border-radius: 5px;
+  font-size: 20px;
+  cursor: pointer;
+  font-family: "Oswald", sans-serif;
 }
 
-
-
 .logo {
-    margin-right: 15px;
+  margin-right: 15px;
 }
 
 .list {
-    cursor: pointer;
-    padding: 5px 15px;
-    font-weight: 600;
-    font-family: 'Oswald', sans-serif;
+  cursor: pointer;
+  padding: 5px 15px;
+  font-weight: 600;
+  font-family: "Oswald", sans-serif;
 }
 
 .sidebar {
-    background-color: rgba(78, 78, 78, 0.63);
-    height:35px;
-    width: 2px;
-    margin: 0 7px;
-    /* margin-top: 2px; */
+  background-color: rgba(78, 78, 78, 0.63);
+  height: 35px;
+  width: 2px;
+  margin: 0 7px;
+  /* margin-top: 2px; */
 }
 
 .signin {
-    color: white;
-    font-family: 'Inter', sans-serif;
-    font-size: 14px;
-    font-weight: 700;
-    /* background-color: red; */
-    padding: 6px 15px;
-    cursor: pointer;
+  color: white;
+  font-family: "Inter", sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+  /* background-color: red; */
+  padding: 6px 15px;
+  cursor: pointer;
 }
 
 .main {
-    background-color: black;
-    /* later change it */
-    height: 100vh;
+  background-color: black;
+  /* later change it */
+  /* height: 100vh; */
+  /* overflow-y: scroll; */
+  padding-bottom: 50px;
 }
 
 .main_container {
-    /* background-color: red; */
-    padding: 7vh;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
+  /* background-color: red; */
+  padding: 7vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .main_heading {
-    font-family: 'Inter', sans-serif;
-    font-size: 42px;
-    font-weight: 600;
-    color: white;
+  font-family: "Inter", sans-serif;
+  font-size: 42px;
+  font-weight: 600;
+  color: white;
 }
 
 .main_para {
-    margin-top: 15px;
-    color: white;
-    font-family: 'Inter', sans-serif;
-    font-size: 14px;
-    font-weight: 300;
+  margin-top: 15px;
+  color: white;
+  font-family: "Inter", sans-serif;
+  font-size: 14px;
+  font-weight: 300;
 }
 
 .container {
-    background-color: red;
+  /* background-color: red; */
 }
 
 .gradient-bg-footer {
+  background-color: #0f0e13;
+  background-image: radial-gradient(
+      at 0% 100%,
+      hsla(253, 16%, 7%, 1) 0,
+      transparent 53%
+    )
+    /* ,radial-gradient(at 50% 150%, hsla(339, 49%, 30%, 1) 0, transparent 50%); */
+}
+
+.card_container {
+    width: 20vh;
+    /* background-color: rgba(94, 94, 94, 0.274); */
+    background-color: #1a1a1a;
+    /* height: 40vh; */
+    border-radius: 3px;
+    margin-bottom: 25px;
+}
+
+.card_inner {
     background-color: #0f0e13;
-    background-image: 
-      radial-gradient(at 0% 100%, hsla(253,16%,7%,1) 0, transparent 53%), 
-      radial-gradient(at 50% 150%, hsla(339,49%,30%,1) 0, transparent 50%);
-  }
+    width: 20vh;
+    height: 28vh;
+}
+
+.bottom_section {
+    padding: 7px 9px;
+}
+
+.view_more {
+    background-color: rgba(70, 69, 69, 0.534);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 3px;
+    margin-top: 10px;
+    margin-bottom: 5px;
+    border-radius: 3px;
+}
+
+.view_more_cont {
+    color: #5799EF;
+    font-size: 14px;
+    font-weight: 600;
+    font-family: 'Inter', sans-serif;
+}
+
+.movie_name {
+    color: white;
+    font-family: 'Inter', sans-serif;
+}
+
+.rate {
+    color: white;
+    font-family: 'Inter', sans-serif;
+    display: flex;
+    align-items: center;
+    /* background-color: red;/ */
+}
+
+.font2 {
+  font-family: 'Inter', sans-serif;
+}
+
+.rating {
+  font-size: 14px;
+  margin-top: 10px;
+  margin-left: 7px;
+  margin-bottom: 5px;
+}
