--- a/src/utilities/css/style.css
+++ b/src/utilities/css/style.css
@@ -113,13 +113,37 @@
     /* ,radial-gradient(at 50% 150%, hsla(339, 49%, 30%, 1) 0, transparent 50%); */
 }
 
+.gradient-bg-services {
+  background-color:#000000;
+  background-image: 
+    radial-gradient(at 100% 0%, hsla(253,16%,7%,1) 0, transparent 50%), 
+    radial-gradient(at 50% 0%, rgba(90, 95, 46, 0.637) 0, transparent 50%);
+}
+
 .card_container {
     width: 20vh;
     /* background-color: rgba(94, 94, 94, 0.274); */
-    background-color: #1a1a1a;
+    background-color: #0f0909;
     /* height: 40vh; */
     border-radius: 3px;
     margin-bottom: 25px;
+}
+
+.white-glassmorphism {
+  background: rgba(255, 255, 255, 0.05);
+  border-radius: 16px;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.blue-glassmorphism {
+  background: rgb(39, 51, 89, 0.4);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(0, 0, 0, 0.3);
 }
 
 .card_inner {
