--- a/src/utilities/css/style.css
+++ b/src/utilities/css/style.css
@@ -137,15 +137,17 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 3px;
+    padding: 4px;
     margin-top: 10px;
     margin-bottom: 5px;
     border-radius: 3px;
+    cursor: pointer;
 }
 
 .view_more_cont {
     color: #5799EF;
     font-size: 14px;
+    cursor: pointer;
     font-weight: 600;
     font-family: 'Inter', sans-serif;
 }
@@ -172,4 +174,217 @@
   margin-top: 10px;
   margin-left: 7px;
   margin-bottom: 5px;
+}
+
+.watch_container {
+  background-color: black;
+  /* height: 50vh; */
+  padding-bottom: 50px;
+}
+
+.watch_inner {
+  /* background-color: red; */
+  padding-top: 40px;
+  padding-left: 40px;
+  padding-right: 40px;
+  width: 65%;
+  
+}
+
+.watch_header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.watch_left {
+  /* background-color: yellow; */
+  font-size: 38px;
+  color: white;
+}
+
+.flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.watch_info {
+  margin-right: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: rgba(255, 255, 255, 0.644);
+}
+
+.gray_title {
+  font-family: 'Inter', sans-serif;
+  font-weight: 600;
+  font-size: 13px;
+}
+
+.watch_info_inner {
+  /* margin-top: -5px; */
+  font-size: 18px;
+  font-family: 'Inter', sans-serif;
+}
+
+.watch_rating {
+}
+
+.star {
+  margin-right: 7px;
+}
+
+.your_rating {
+  color: #5799EF;
+  font-weight: 700;
+  font-size: 18px;
+  margin-top:5px;
+}
+
+.movie_details_container {
+  /* background-color: red; */
+  padding-top: 20px;
+  display: flex;
+  /* justify-content: space-between; */
+}
+
+.md_poster {
+  width: 30vh;
+  height: 40vh;
+}
+
+.md_left {
+  /* background-color: #1a1a1a; */
+  margin-right: 25px;
+}
+
+.md_right {
+  width: 70%;
+}
+
+.md_title {
+  width: 100%;
+  font-weight: 700;
+  font-family: 'Inter', sans-serif;
+  color: rgba(255, 255, 255, 0.877);
+}
+
+.name {
+  color: #5799EF;
+  font-family: 'Inter', sans-serif;
+  margin-left: 8px;
+  font-weight: 500;
+}
+
+.description {
+  color: white;
+  font-family: 'Inter', sans-serif;
+}
+
+.wm_main {
+  /* background-color: red; */
+  width: 65%;
+  padding: 30px 40px;
+}
+
+.wm_stick {
+  width: 5px;
+  height: 40px;
+  background-color: #f5c518;
+}
+
+.wm_header {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.wm_title {
+  font-size: 32px;
+  margin-left: 10px;
+  font-weight: 600;
+}
+
+.cast_inner {
+  /* background-color: red; */
+  margin-top: 20px;
+  font-family: 'Inter', sans-serif; 
+  width: 60%;
+}
+
+.cast_name {
+  font-family: 'Inter', sans-serif; 
+  font-weight: 700;
+}
+
+.cast_real_name {
+  font-family: 'Inter', sans-serif; 
+  color: gray;
+  font-weight: 500;
+}
+
+.cast_user {
+  margin-right: 10px;
+  margin-top: 7px;
+}
+
+.gray {
+  color: gray;
+}
+
+.review {
+  border: 1px solid rgba(187, 183, 183, 0.507);
+  width: 50%;
+  margin-bottom: 20px;
+  padding: 10px;
+  border-radius: 4px;
+  font-family: 'Inter', sans-serif;
+  padding-top: 15px;
+}
+
+.username {
+  font-weight: 700;
+  font-size: 14px;
+  background-color: #f5c518;
+  padding: 5px 10px;
+  border-radius: 3px;
+  font-family: 'Inter', sans-serif;
+}
+
+.like_container {
+  display: flex;
+}
+
+
+.read {
+  font-family: 'Inter', sans-serif;
+}
+
+.like_container {
+  font-family: 'Inter', sans-serif;
+  margin-top: 10px;
+}
+
+.like {
+  font-size: 14px;
+  display: flex;
+  font-family: 'Inter', sans-serif;
+  align-items: center;
+  justify-content: center;
+  font-weight: 600;
+  margin-right: 15px;
+  cursor: pointer;
+}
+
+.dislike {
+  font-size: 14px;
+  font-family: 'Inter', sans-serif;
+  font-weight: 600;
+}
+
+.comment {
+  font-family: 'Inter', sans-serif;
+  font-weight: 500;
 }
